--- a/src/scss/partials/popup.scss
+++ b/src/scss/partials/popup.scss
@@ -3,6 +3,8 @@
   background-color: $white;
   border-radius: 10px;
   overflow: hidden;
+  position: absolute;
+  z-index: 10000;
 }
 
 .popup-head {
@@ -25,9 +27,10 @@
   font-size: 12px;
   font-weight: 300;
   margin-left: 7px;
+  flex: 1 0 0;
 }
 
 .popup-review {
   height: 154px;
-  padding: 15px;
+  padding: 15px 0;
 }
